--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a simple to do list application backend",
   "main": "index.js",
   "scripts": {
-     "serve": "nodemon --exec ts-node --transpile-only src/index.ts"
+    "serve": "nodemon --exec ts-node --transpile-only src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.34",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
@@ -35,7 +37,10 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.19.1",
-    "winston": "^3.7.2"
+    "swagger-routes-express": "^3.3.1",
+    "swagger-ui-express": "^4.4.0",
+    "winston": "^3.7.2",
+    "yamljs": "^0.3.0"
   },
   "homepage": "https://github.com/muntaqeem-emumba/To-do-list-node#readme"
 }
