--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
@@ -36,6 +37,7 @@
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.19.1",
     "swagger-routes-express": "^3.3.1",
     "swagger-ui-express": "^4.4.0",
